[package]
name = "rsdsl_dhcp6"
version = "0.2.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhcproto = "0.9.0"
rand = "0.8.5"
rsdsl_pd_config = { git = "https://github.com/rsdsl/pd_config.git", version = "0.1.0" }
serde_json = "1.0"
socket2 = "0.5.3"
sysinfo = "0.29.10"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt", "macros"] }
trust-dns-proto = "0.22.0"
