[package]
name = "rsdsl_dhcp6"
version = "0.3.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhcproto = "0.9.0"
rand = "0.8.5"
rsdsl_ip_config = { git = "https://github.com/rsdsl/ip_config.git", version = "0.3.0" }
rsdsl_pd_config = { git = "https://github.com/rsdsl/pd_config.git", version = "0.1.0" }
serde_json = "1.0"
socket2 = "0.5.3"
sysinfo = { version = "0.29.10", default-features = false }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
trust-dns-proto = "0.22.0"
